# Monte-Carlo-Monopoly

./: Board.cpp  Board.h  CMakeLists.txt  CommunityChest.cpp  CommunityChest.h  Dice.h  Player.cpp  Player.h  Property.cpp  Property.h  README.md  TerminalColors.h  Trading.h  main.cpp  player.cpp  player.h
SquareTypes/: Card.h  Square.h
SquareTypes/Chance/: Chance.cpp  Chance.h
SquareTypes/Community Chest/: CommunityChest.cpp  CommunityChest.h
SquareTypes/GoToJail/: GoToJail.cpp  GoToJail.h
SquareTypes/Jail/: Jail.cpp  Jail.h
SquareTypes/Property/: Property.cpp  Property.h  Railroad.cpp  Railroad.h  Utility.cpp  Utility.h
SquareTypes/Taxes/: IncomeTax.h  LuxuryTax.h
